Animated fire texture. Music tweaks.

--- a/snowop/snowop.html
+++ b/snowop/snowop.html
@@ -133,11 +133,11 @@
 			</div>
 		</div>
 		<p class="footer">
-            Build your home in the middle from the scattered blocks.<br/>
+            Build your home in the middle from the scattered blocks, then get both of you inside.<br/>
             Gamepad (recommended) or keyboard.<br/>
             Player 1: WASD+Space<br/>
             Player 2: Arrows+Return<br/>
-
+            R to restart. M to mute.<br/>
             Created for <a href="http://ludumdare.com/compo/ludum-dare-31/?action=preview&uid=5283">LD31</a>
         </p>
 	</body>
